--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/coverflow.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -26,17 +27,62 @@
         <script src="js/vendor/jquery-ui.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/vendor/coverflow/jquery.coverflow.js"></script>
+        <script src="js/vendor/coverflow/jquery.touchSwipe.min.js"></script>
+        <script src="js/vendor/coverflow/jquery.interpolate.min.js"></script>
 
         <div class="coverflow">
-            <div class="cover">A</div>
-            <div class="cover">B</div>
-            ...
-            <div class="cover">Y</div>
-            <div class="cover">Z</div>
+            <div class="cover" data-name="A">A</div>
+            <div class="cover" data-name="B">B</div>
+            <div class="cover" data-name="C">C</div>
+            <div class="cover" data-name="D">D</div>
+            <div class="cover" data-name="E">E</div>
+            <div class="cover" data-name="Y">Y</div>
+            <div class="cover" data-name="Z">Z</div>
         </div>
+
+        <div class="photos" autofocus>
+            <img class="cover" data-name="Attic" src="//vanderlee.github.io/coverflow/demo/attic.jpg"/>
+            <img class="cover" data-name="Aurora Borealis" src="//vanderlee.github.io/coverflow/demo/aurora.jpg"/>
+            <img class="cover" data-name="Barbecued steak" src="//vanderlee.github.io/coverflow/demo/barbecue.jpg"/>
+            <img class="cover" data-name="Black swan" src="//vanderlee.github.io/coverflow/demo/blackswan.jpg"/>
+            <img class="cover" data-name="Chess" src="//vanderlee.github.io/coverflow/demo/chess.jpg"/>
+            <img class="cover" data-name="Fire" src="//vanderlee.github.io/coverflow/demo/fire.jpg"/>
+            <img class="cover" data-name="Keyboard" src="//vanderlee.github.io/coverflow/demo/keyboard.jpg"/>
+            <img class="cover" data-name="Locomotive" src="//vanderlee.github.io/coverflow/demo/locomotive.jpg"/>
+            <img class="cover" data-name="Novo-Diveevo monastery" src="//vanderlee.github.io/coverflow/demo/diveevo.jpg"/>
+            <img class="cover" data-name="Person" src="//vanderlee.github.io/coverflow/demo/person.jpg"/>
+            <img class="cover" data-name="Rose" src="//vanderlee.github.io/coverflow/demo/rose.jpg"/>
+            <img class="cover" data-name="Seagull" src="//vanderlee.github.io/coverflow/demo/seagull.jpg"/>
+            <img class="cover" data-name="Solar power" src="//vanderlee.github.io/coverflow/demo/solarpower.jpg"/>
+        </div>
+        <div id="photos-info">
+            <div id="photos-name"></div>
+        </div>
+
         <script>
             $(function() {
                 $('.coverflow').coverflow();
+                $('.photos').coverflow({
+                    easing:			'easeOutElastic',
+                    duration:		'slow',
+                    index:			3,
+                    width:			320,
+                    height:			240,
+                    visible:		'density',
+                    selectedCss:	{	opacity: 1	},
+                    outerCss:		{	opacity: .1	},
+
+                    confirm:		function() {
+                        console.log('Clicked: ' + $('#photos-name').text());
+                    },
+
+                    change:			function(event, cover) {
+                        var img = $(cover).children().andSelf().filter('img').last();
+                        $('#photos-name').text(img.data('name') || 'unknown');
+                    }
+
+                });
             });
         </script>
     </body>
