--- a/src/index.html
+++ b/src/index.html
@@ -38,20 +38,8 @@
             </div>
 
             <div class="frame" id="basic">
-                <ul class="clearfix">
-                    <li><img data-name="Attic" src="//vanderlee.github.io/coverflow/demo/attic.jpg"/></li>
-                    <li><img data-name="Aurora Borealis" src="//vanderlee.github.io/coverflow/demo/aurora.jpg"/></li>
-                    <li><img data-name="Barbecued steak" src="//vanderlee.github.io/coverflow/demo/barbecue.jpg"/></li>
-                    <li><img data-name="Black swan" src="//vanderlee.github.io/coverflow/demo/blackswan.jpg"/></li>
-                    <li><img data-name="Chess" src="//vanderlee.github.io/coverflow/demo/chess.jpg"/></li>
-                    <li><img data-name="Fire" src="//vanderlee.github.io/coverflow/demo/fire.jpg"/></li>
-                    <li><img data-name="Keyboard" src="//vanderlee.github.io/coverflow/demo/keyboard.jpg"/></li>
-                    <li><img data-name="Locomotive" src="//vanderlee.github.io/coverflow/demo/locomotive.jpg"/></li>
-                    <li><img data-name="Novo-Diveevo monastery" src="//vanderlee.github.io/coverflow/demo/diveevo.jpg"/></li>
-                    <li><img data-name="Person" src="//vanderlee.github.io/coverflow/demo/person.jpg"/></li>
-                    <li><img data-name="Rose" src="//vanderlee.github.io/coverflow/demo/rose.jpg"/></li>
-                    <li><img data-name="Seagull" src="//vanderlee.github.io/coverflow/demo/seagull.jpg"/></li>
-                    <li><img data-name="Solar power" src="//vanderlee.github.io/coverflow/demo/solarpower.jpg"/></li>
+                <ul id="basic-list" class="clearfix">
+
                 </ul>
             </div>
 
