Add Spinner while ajax is active

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/coverflow.css">
         <link rel="stylesheet" href="css/sly.css">
+        <link rel="stylesheet" href="css/spinner.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -50,5 +51,6 @@
             </div>
         </div>
 
+        <div class="modal"><!-- Place at bottom of page --></div>
     </body>
 </html>
