Added controls to skip/pause/repeat

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/coverflow.css">
         <link rel="stylesheet" href="css/sly.css">
         <link rel="stylesheet" href="css/spinner.css">
+        <link rel="stylesheet" href="css/controls.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -30,6 +31,22 @@
         <script src="js/main.js"></script>
         <script src="js/vendor/sly/dist/sly.min.js"></script>
 
+        <div id="musicControls" class="musicControls" draggable="false" ondragstart="return false;">
+            <div class="previous" data-name="Previous" data-id="Previous" data-type="3201">
+                <img src="img/btn_StepForwardNormalBlue.png">
+            </div>
+            <div class="playPause" data-name="Play/Pause" data-id="PlayPause" data-type="3202">
+                <img class="play" src="img/btn_Play1Normal.png">
+                <img class="pause" src="img/btn_Stop1NormalBlue.png">
+            </div>
+            <div class="next" data-name="Next" data-id="Next" data-type="3203">
+                <img src="img/btn_StepForwardNormalBlue.png">
+            </div>
+            <div class="repeat" data-name="Repeat" data-id="Repeat" data-type="3204">
+                <img src="img/btn_button_blue_repeat.png">
+                <span class="repeatingOnce">1</span>
+            </div>
+        </div>
 
         <div class="wrap">
 
