Publish constants from PHP to JS

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <script src="getConstants.php"></script>
         <script src="js/vendor/jquery-2.2.3.min.js"></script>
         <script src="js/vendor/jquery-ui.min.js"></script>
         <script src="js/vendor/reflection.js"></script>
