Status-Polling to update controls (preparation to display current song); option to block clicks while the screen is turned off

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,8 @@
 
         </div>
 
-        <div class="modal"><!-- Place at bottom of page --></div>
+        <div id="modalContainer" class="modal spinner"><!-- Place at bottom of page --></div>
+
+        <div id="screenSaverOverlay" class="lock"></div>
     </body>
 </html>
